--- a/templates/message/messageReply.html.twig
+++ b/templates/message/messageReply.html.twig
@@ -32,11 +32,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/profile">Profile</a>
                         </li>
-                        {# {% if app.user.roles == [1] %}
+                        {% if app.user.roles == ["ROLE_ADMIN", 0] %}
                             <li class="nav-item">
-                                <a class="nav-link text-danger" href="/admin">Logout</a>
+                                <a class="nav-link text-danger" href="/admin">Admin Zone</a>
                             </li>
-                        {% endif %} #}
+                        {% endif %}
                         <li class="nav-item">
                             <a class="nav-link" href="/logout">Logout</a>
                         </li>
