--- a/templates/outbox/outbox.html.twig
+++ b/templates/outbox/outbox.html.twig
@@ -31,6 +31,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/profile">Profile</a>
                         </li>
+                        {% if app.user.roles == ["ROLE_ADMIN", 0] %}
+                            <li class="nav-item">
+                                <a class="nav-link text-danger" href="/admin">Admin Zone</a>
+                            </li>
+                        {% endif %}
                         <li class="nav-item">
                             <a class="nav-link" href="/logout">Logout</a>
                         </li>
