--- a/templates/profile/profile.html.twig
+++ b/templates/profile/profile.html.twig
@@ -30,6 +30,11 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
                         </li>
+                        {% if app.user.roles == ["ROLE_ADMIN", 0] %}
+                            <li class="nav-item">
+                                <a class="nav-link text-danger" href="/admin">Admin Zone</a>
+                            </li>
+                        {% endif %}
                         <li class="nav-item">
                             <a class="nav-link" href="/logout">Logout</a>
                         </li>
