groups added // roles fixed

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -36,6 +36,6 @@
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn btn-primary">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
