--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -27,7 +27,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/profile">Profile</a>
                     </li>
-                    {% if app.user.roles == ["ROLE_ADMIN", 0] %}
+                    {% if app.user.roles == ["ROLE_ADMIN", "ROLE_USER"] %}
                         <li class="nav-item">
                             <a class="nav-link active text-danger" aria-current="page" href="/admin"><u>Admin Zone</u></a>
                         </li>
