--- a/templates/profile/profile.html.twig
+++ b/templates/profile/profile.html.twig
@@ -28,9 +28,12 @@
                             <a class="nav-link" href="/message">Send Message</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/groups">Groups</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
                         </li>
-                        {% if app.user.roles == ["ROLE_ADMIN", 0] %}
+                        {% if app.user.roles == ["ROLE_ADMIN", "ROLE_USER"] %}
                             <li class="nav-item">
                                 <a class="nav-link text-danger" href="/admin">Admin Zone</a>
                             </li>
