--- a/templates/group/index.html.twig
+++ b/templates/group/index.html.twig
@@ -80,7 +80,7 @@
                 {% for userID in group.userIDs %}
                     {% if userID == app.user.id %}
                         <div id="msg" class="list-group-item list-group-item-action d-flex gap-3 py-3">
-                        <img src="{{ 'uploads/pfp_group_default.jpg' }}" alt="group-pfp" class="" style="width: 60px; height: 60px;" />
+                            <img src="{{ 'uploads/pfp_group_default.jpg' }}" alt="group-pfp" class="" style="width: 60px; height: 60px;" />
                             <div id="alias" class="alias message d-flex gap-2 my-3 w-50 justify-content-between"><b>{{ group.alias }}</b></div>
                                 <div class="participants mx-2">
                                     {# <div class="group-creator">{{ creatorUsername }}</div> #}
@@ -92,7 +92,12 @@
                                         {% endfor %}
                                     {% endfor %}
                                 </div>
-                            <div class="timestamp msg-item opacity-50 text-nowrap" style="width: 50px;">{{ group.timestamp | date("Y-m-d H:i:s") }}</div>
+                            <div>
+                            <div class="timestamp msg-item opacity-50 text-nowrap" style="width: 50px;"><u>Created</u>: {{ group.timestamp | date("Y-m-d H:i:s") }}</div>
+                        </div>
+                        <div class="text-nowrap my-auto">
+                            <a href="{{ path('group_messages', {'id': group.id}) }}" class="btn btn-warning my-3">Send message</a>
+                            {# <a href="/leave-group" class="btn btn-danger my-3">Leave group</a> #}
                         </div>
                     {% endif %}
                 {% endfor %}
