--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -28,7 +28,8 @@
 
             <button type="submit" class="btn btn-primary">Login</button>
             <br/>
-            <a href="{{path('app_register')}}" class="btn btn-warning">Or register if you don't have an account!</a>
+            <a href="{{ path('app_forgot_password_request') }}" class="btn btn-warning">Reset your password!</a>
+            <a href="{{ path('app_register') }}" class="btn btn-success">Or register if you don't have an account!</a>
         </form>
     </main>
 
