--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -25,6 +25,9 @@
                         <a class="nav-link" href="/message">Send Message</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/groups">Groups</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/profile">Profile</a>
                     </li>
                     {% if app.user.roles == ["ROLE_ADMIN", "ROLE_USER"] %}
